Fix cover layout on mobile version

--- a/src/app/components/cover-image-selector/cover-image-selector.component.scss
+++ b/src/app/components/cover-image-selector/cover-image-selector.component.scss
@@ -1,6 +1,16 @@
 
 .cover-image-grid {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  grid-template-rows: repeat(3, minmax(0, auto));
   row-gap: 3.75rem;
   column-gap: 1rem;
   align-content: start;
+}
+
+@media (max-width: 529px) {
+  .cover-image-grid {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-template-rows: repeat(3, minmax(0, auto));
+    row-gap: 1rem;
+  }
 }
